switched files for use

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="css/styles.css" rel="stylesheet">
+
+<div class="logoh">
+<img src="images/logo.png">
+<h1>BlueRiver</h1>
+<h2>Studios</h2>
+</div>
+
 </head>
 <body>
     
