logo and top words edited

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="css/styles.css" rel="stylesheet">
+</head>
+
 
 <div class="logoh">
 <img src="images/logo.png">
+<div class="logoh2">
 <h1>BlueRiver</h1>
 <h2>Studios</h2>
-</div>
+</div> <!-----------end of logoh2----------->
+</div>  <!-------------endoflogoh--------->
 
-</head>
 <body>
     
 </body>
