navigation code started

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </div> <!-----------end of logoh2----------->
 </div>  <!-------------endoflogoh--------->
 
+
+<div class="nav">
+<img src="images/head_icon_home.png"><h3>HOME</h3>
+<img src="images/head_icon_portfolio.png"><h3>PORTFOLIO</h3>
+<img src="images/head_icon_contact.png"><h3>CONTACT</h3>
+
+
+</div>
+
+
+
 <body>
     
 </body>
