added banner and code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="logoh2">
 <h1>BlueRiver</h1>
 <h2>Studios</h2>
-</div> <!-----------end of logoh2----------->
+</div> <!-----------endoflogoh2----------->
 </div>  <!-------------endoflogoh--------->
 
 
@@ -21,10 +21,12 @@
 <img src="images/head_icon_home.png"><h3>HOME</h3>
 <img src="images/head_icon_portfolio.png"><h3>PORTFOLIO</h3>
 <img src="images/head_icon_contact.png"><h3>CONTACT</h3>
+</div>  <!-------------endofnavigationdiv---------------->
 
 
-</div>
-
+<figure class="banner">
+<img src="images/Banner.png">
+</figure>
 
 
 <body>
