added black bar and content

--- a/index.html
+++ b/index.html
@@ -13,20 +13,45 @@
 <div class="logoh2">
 <h1>BlueRiver</h1>
 <h2>Studios</h2>
-</div> <!-----------endoflogoh2----------->
-</div>  <!-------------endoflogoh--------->
+</div> <!------------------endoflogoh2------------------->
+</div>  <!-------------------endoflogoh------------------->
 
 
 <div class="nav">
 <img src="images/head_icon_home.png"><h3>HOME</h3>
 <img src="images/head_icon_portfolio.png"><h3>PORTFOLIO</h3>
 <img src="images/head_icon_contact.png"><h3>CONTACT</h3>
-</div>  <!-------------endofnavigationdiv---------------->
+</div>  <!-------------endofnavigationdiv----------------------->
 
 
 <figure class="banner">
 <img src="images/Banner.png">
 </figure>
+
+<div class="blackbar">
+    <div class="blackbar2">
+<h2>EXPECT THE BEST</h2>
+<P>Lorem ipsum dolor sit amet, tortor elit vel mauris, vitae laoreet maecenas mattis varius. Ante nunc mauris sed urna, eget a nonummy pellentesque etiam.</P>
+<ul>
+    <li>Mobile First Design</li>
+    <li>Masterful Graphics</li>
+    <li>Modern Designs</li>
+    <li>Marketing</li>
+</ul>
+</div> <!------------endofblackbar2-------------------------->
+<div class="blackbar3">
+<h2>OUR FORMULA</h2>
+<ul class="formula">
+<li>development</li>
+<li>+deployment</li>
+<li>+design</li>
+</ul>
+<h2>SUCCESS</h2>
+</div> <!----------------endofblackbar3----------------------->
+</div>  <!-----------endofblackbar-------------------------->
+
+
+
 
 
 <body>
