margined top portion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
-
+<main>
 <div class="logoh">
 <img src="images/logo.png">
 <div class="logoh2">
@@ -27,6 +27,10 @@
 <figure class="banner">
 <img src="images/Banner.png">
 </figure>
+</main>
+
+
+
 
 <div class="blackbar">
     <div class="blackbar2">
@@ -54,7 +58,5 @@
 
 
 
-<body>
-    
-</body>
+
 </html>
