--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
 
 
 
-<h1>MORE ABOUT US</h1>
+<h4>MORE ABOUT US</h4>
 <div class="aboutus">
+        
        
    <article> 
 <figure class="about">
 <img src="images/Layer4.png">
 </figure>
 <h2>Our Persistance</h2>
-<p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus. Non sem, eget eu luctus faucibus quis, ut luctus sit wisi turpis. Neque sed nam eu viverra condimentum, sed odio consectetuer et ipsum, mollis inceptos vitae. Lacus morbi vestibulum, nunc lectus libero, a et, enim iaculis nibh, quisque varius iste cras.</p>
+<p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
 </article>
 <article> 
 
@@ -72,7 +73,7 @@
         <img src="images/Layer2.png">
         </figure>
         <h2>Our Process</h2>
-        <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus. Non sem, eget eu luctus faucibus quis, ut luctus sit wisi turpis. Neque sed nam eu viverra condimentum, sed odio consectetuer et ipsum, mollis inceptos vitae. Lacus morbi vestibulum, nunc lectus libero, a et, enim iaculis nibh, quisque varius iste cras.</p>
+        <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
         </article>
 
         <article> 
@@ -81,7 +82,7 @@
                 <img src="images/Layer3.png">
                 </figure>
                 <h2>Our People</h2>
-                <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus. Non sem, eget eu luctus faucibus quis, ut luctus sit wisi turpis. Neque sed nam eu viverra condimentum, sed odio consectetuer et ipsum, mollis inceptos vitae. Lacus morbi vestibulum, nunc lectus libero, a et, enim iaculis nibh, quisque varius iste cras.</p>
+                <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
                 </article>
 
                 <article> 
@@ -90,7 +91,7 @@
                         <img src="images/Layer1.png">
                         </figure>
                         <h2>Our Payoff</h2>
-                        <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus. Non sem, eget eu luctus faucibus quis, ut luctus sit wisi turpis. Neque sed nam eu viverra condimentum, sed odio consectetuer et ipsum, mollis inceptos vitae. Lacus morbi vestibulum, nunc lectus libero, a et, enim iaculis nibh, quisque varius iste cras.</p>
+                        <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
                         </article>
 
 </div>  <!------------endofaboutusdiv---------------->
