adjusted footer code and sponsors

--- a/index.html
+++ b/index.html
@@ -97,7 +97,63 @@
 </div>  <!------------endofaboutusdiv---------------->
 
 
+<div class="bottom">
+<article> 
+<figure class="about"><img src="images/Layer6.png"></figure>
+<h2>Infrastructure</h2>
+<p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
+</article>
 
+<article>
+<figure class="about"><img src="images/Layer7.png"></figure>
+<h2>Technology</h2>
+<p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
+</article>
+
+
+
+<article>
+<figure class="about"><img src="images/Grapg.png"></figure>
+<a href="#">SEE PRICING</a>
+</article>
+
+<article>
+<h2>Live 24/7 Technical Support</h2>
+        <p>Lorem ipsum dolor sit amet, posuere sit convallis. Mus velit tempus donec nec lacus libero, neque mauris semper vivamus. Enim diam, nunc euismod id, augue imperdiet orci adipiscing eu turpis metus.</p>
+        </article>
+</div>
+
+
+
+
+<div class="sponsors">
+<figure class="spon">
+    <img src="images/Layer8.png">
+</figure>
+<figure class="spon">
+        <img src="images/Layer9.png">
+    </figure>
+    <figure class="spon">
+            <img src="images/Layer10.png">
+        </figure>
+        <figure class="spon">
+                <img src="images/Layer11.png">
+            </figure>
+            <figure class="spon">
+                    <img src="images/Layer12.png">
+                </figure>
+                <figure class="spon">
+                        <img src="images/Layer14.png">
+                    </figure>
+
+</div>
+
+
+        <footer>
+<p>Call 1-800-345-7485</p>
+
+        </footer>
+        
 
 
 </html>
