medium and small adjustment

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <article>
 <figure class="about"><img src="images/Grapg.png"></figure>
-<a href="#">SEE PRICING</a>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">SEE PRICING</a><p class="company">Company Growth 2012-2016</p>
 </article>
 
 <article>
